@@ -2,6 +2,8 @@
 # $Id$
 nn-nn-15 - Version 5.1.36
 
+  - Fix for Bug#20804635, GETTIME() AND GETDATE() FUNCTIONS FAILS WHEN FRACTIONAL PART EXISTS
+
   - Fix for Bug#62452 (16444069), NPE thrown in JDBC4MySQLPooledException when statement is closed.
 
   - Fix for BUG#70927 (17810800), Connector/J COM_CHANGE_USER handling is broken
